--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,37 @@
-.App {
-  text-align: center;
+.deliveroo {
+  background-color: #f2f5f5;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.banniere {
+  background-color: #ffffff;
+  height: 250px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.header {
+  background-color: #ffffff;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.banniere img {
+  width: 350px;
+  height: 195px;
+}
+.banniere p {
+  width: 830px;
+}
+.body img {
+  height: 130px;
+  width: 130px;
+}
+.meals {
+  justify-content: space-between;
+  display: flex;
+  width: 405px;
+  height: 160px;
+  background-color: #ffffff;
+}
+.meal {
+  flex-wrap: wrap;
+  display: flex;
+}
+.body {
+  margin-left: 120px;
+  width: 60%;
 }
