--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 .deliveroo {
+  font-family: "Roboto", sans-serif;
   background-color: #f2f5f5;
 }
 .banniere {
@@ -7,31 +8,85 @@
   display: flex;
 }
 .header {
+  border-bottom: 1px solid #bac3c3;
+  height: 60px;
   background-color: #ffffff;
 }
+.logo {
+  margin-left: 140px;
+  height: 50px;
+}
 .banniere img {
+  margin-top: 20px;
+  border-radius: 5%;
   width: 350px;
   height: 195px;
 }
+.banniere {
+  padding-left: 80px;
+}
 .banniere p {
-  width: 830px;
+  font-size: 19px;
+  color: #868a8a;
+  font-weight: 300;
+  padding-left: 60px;
+  width: 800px;
+  margin-right: 50px;
 }
 .body img {
+  margin: 10px;
+  border-radius: 5%;
   height: 130px;
   width: 130px;
 }
 .meals {
+  margin-top: 10px;
+  padding-left: 10px;
+
+  border-radius: 5%;
   justify-content: space-between;
   display: flex;
-  width: 405px;
+  width: 400px;
   height: 160px;
+  margin: 10px;
   background-color: #ffffff;
 }
 .meal {
+  list-style-type: none;
   flex-wrap: wrap;
   display: flex;
 }
 .body {
-  margin-left: 120px;
-  width: 60%;
+  margin-top: 0px;
+  margin-left: 100px;
+  width: 70%;
+}
+.description {
+  color: #808484;
+  line-height: 20, 8px;
+  font-size: 14px;
+  font-weight: lighter;
+  height: 30%;
+  overflow: hidden;
+}
+h2 {
+  font-size: 32px;
+  margin-left: 60px;
+}
+h3 {
+  margin-bottom: 5px;
+  margin-left: 40px;
+  font-size: 24px;
+}
+.title {
+  font-weight: normal;
+  font-size: 18px;
+}
+.star {
+  color: #ff8000;
+  margin-left: 10px;
+}
+.price {
+  color: #808484;
+  size: 17px;
 }
